# gosdk

./: CMakeLists.txt  CMakeSettings.json  README.md  _clang-format  gosdk.sln
gosdk/: dllmain.cpp  gosdk.vcxproj  gosdk.vcxproj.filters
gosdk/Debug/gosdk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gosdk.lastbuildstate
gosdk/config/: config.cpp  config.hpp  global.hpp  utilities.hpp
gosdk/csgo/: global.hpp
gosdk/csgo/hacks/: global.hpp
gosdk/csgo/hacks/misc/: movement.hpp
gosdk/csgo/hacks/visuals/: esp.hpp
gosdk/csgo/valve/: global.hpp  interfaces.cpp  interfaces.hpp
gosdk/csgo/valve/classes/: bounds.hpp  client_class.hpp  convar.hpp  global.hpp  players.hpp  recv_prop.hpp  user_cmd.hpp
gosdk/csgo/valve/interfaces/: global.hpp  i_base_client_dll.hpp  i_client_mode.hpp  i_client_unknown.hpp  i_console.hpp  i_debug_overlay.hpp  i_engine_client.hpp  i_entity_list.hpp  i_global_vars.hpp  i_input_system.hpp  i_panel.hpp  i_surface.hpp
gosdk/csgo/valve/utilities/: c_utl.hpp
gosdk/dependencies/: global.hpp
gosdk/dependencies/json/: json.hpp
gosdk/dependencies/xorstr/: xorstr.hpp
gosdk/utilities/: global.hpp
gosdk/utilities/color/: color.hpp
gosdk/utilities/console/: console.hpp
gosdk/utilities/easing/: global.hpp
gosdk/utilities/easing/bitflag/: bitflag.hpp
gosdk/utilities/global/: globals.hpp
gosdk/utilities/hooking/: hook.cpp  hook.hpp  vmt.cpp  vmt.hpp
gosdk/utilities/math/: global.hpp  vector2d.hpp  vector3d.hpp
gosdk/utilities/memory/: global.hpp  memory.hpp
gosdk/utilities/rendering/: render.cpp  render.hpp
(+3 files in other folders)
